# hermit-rs-template

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: build.yml  ci.yml
src/: main.rs
